# napari-blob-detection

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py  index.rst
src/napari_blob_detection/: __init__.py  _detect.py  _points_to_labels.py  _widget.py  napari.yaml
src/napari_blob_detection/_tests/: test_detect.py  test_points_to_labels.py  test_widget.py
