[metadata]
name = napari-blob-detection
version = 0.0.1
author = Andy Sweet
author_email = andrewdsweet@gmail.com
url = https://github.com/andy-sweet/napari-blob-detection
license = BSD-3-Clause
description = Detects blobs in images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/andy-sweet/napari-blob-detection/issues
    Documentation = https://github.com/andy-sweet/napari-blob-detection#README.md
    Source Code = https://github.com/andy-sweet/napari-blob-detection
    User Support = https://github.com/andy-sweet/napari-blob-detection/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-blob-detection = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-blob-detection = napari_blob_detection:napari.yaml
